@@ -1,24 +1,25 @@
 package com.meongnyangerang.meongnyangerang.service;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.meongnyangerang.meongnyangerang.domain.accommodation.Accommodation;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.AccommodationImage;
+import com.meongnyangerang.meongnyangerang.domain.accommodation.AccommodationType;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.AllowPet;
+import com.meongnyangerang.meongnyangerang.domain.accommodation.PetType;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationFacility;
+import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationFacilityType;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationPetFacility;
+import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.AccommodationPetFacilityType;
 import com.meongnyangerang.meongnyangerang.domain.host.Host;
 import com.meongnyangerang.meongnyangerang.domain.host.HostStatus;
 import com.meongnyangerang.meongnyangerang.dto.accommodation.AccommodationCreateRequest;
+import com.meongnyangerang.meongnyangerang.dto.accommodation.AccommodationResponse;
 import com.meongnyangerang.meongnyangerang.exception.ErrorCode;
 import com.meongnyangerang.meongnyangerang.exception.MeongnyangerangException;
 import com.meongnyangerang.meongnyangerang.repository.HostRepository;
@@ -28,11 +29,9 @@ import com.meongnyangerang.meongnyangerang.repository.accommodation.Accommodatio
 import com.meongnyangerang.meongnyangerang.repository.accommodation.AccommodationRepository;
 import com.meongnyangerang.meongnyangerang.repository.accommodation.AllowPetRepository;
 import com.meongnyangerang.meongnyangerang.service.image.ImageService;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -40,9 +39,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.lang.Nullable;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -73,20 +70,31 @@ class AccommodationServiceTest {
   @InjectMocks
   private AccommodationService accommodationService;
 
+  private static final String THUMBNAIL_URL = "https://test.com/image/thumbnail-123.jpg";
+  private static final String ADDITIONAL_IMAGE_URL1 = "https://test.com/image/image1-456.jpg";
+  private static final String ADDITIONAL_IMAGE_URL2 = "https://test.com/image/image2-456.jpg";
+
+  private static final List<AccommodationFacilityType> FACILITY_TYPES = Arrays
+      .asList(AccommodationFacilityType.WIFI, AccommodationFacilityType.PUBLIC_SWIMMING_POOL);
+  private static final List<AccommodationPetFacilityType> PET_FACILITY_TYPES = Arrays
+      .asList(AccommodationPetFacilityType.PET_FOOD, AccommodationPetFacilityType.EXERCISE_AREA);
+  private static final List<PetType> PET_TYPES = Arrays
+      .asList(PetType.SMALL_DOG, PetType.MEDIUM_DOG);
+
   private Host host;
   private AccommodationCreateRequest request;
   private MockMultipartFile thumbnail;
   private List<MultipartFile> additionalImages;
+
   private Accommodation accommodation;
+  private List<AccommodationFacility> facilities;
+  private List<AccommodationPetFacility> petFacilities;
+  private List<AllowPet> allowPets;
+  private List<AccommodationImage> accommodationImages;
 
-  private static final UUID MOCK_UUID = UUID
-      .fromString("123e4567-e89b-12d3-a456-426614174000");
-
-  private static final String IMAGE_PATH_PREFIX = "image/";
 
   @BeforeEach
   void setUp() {
-    // 호스트 객체 생성
     host = Host.builder()
         .id(1L)
         .name("호스트명")
@@ -95,10 +103,81 @@ class AccommodationServiceTest {
         .status(HostStatus.ACTIVE)
         .build();
 
-    // 숙소 요청 Mock 생성
-    request = mock(AccommodationCreateRequest.class);
+    accommodation = Accommodation.builder()
+        .id(1L)
+        .host(host)
+        .name("숙소명")
+        .description("숙소 설명")
+        .address("서울시 강남구")
+        .detailedAddress("test 아파트 101동 101호")
+        .latitude(32.123)
+        .longitude(127.123)
+        .type(AccommodationType.FULL_VILLA)
+        .thumbnailUrl(THUMBNAIL_URL)
+        .build();
 
-    // 이미지 파일 생성
+    request = AccommodationCreateRequest.builder()
+        .name("test-name")
+        .type(AccommodationType.DETACHED_HOUSE)
+        .address("test-address")
+        .detailedAddress("test-detailedAddress")
+        .description("test-description")
+        .latitude(37.123)
+        .longitude(127.123)
+        .facilities(FACILITY_TYPES)
+        .petFacilities(PET_FACILITY_TYPES)
+        .allowPets(PET_TYPES)
+        .build();
+
+    facilities = Arrays.asList(AccommodationFacility.builder()
+            .id(1L)
+            .accommodation(accommodation)
+            .type(AccommodationFacilityType.WIFI)
+            .build(),
+        AccommodationFacility.builder()
+            .id(2L)
+            .accommodation(accommodation)
+            .type(AccommodationFacilityType.PUBLIC_SWIMMING_POOL)
+            .build()
+    );
+
+    petFacilities = Arrays.asList(AccommodationPetFacility.builder()
+            .id(1L)
+            .accommodation(accommodation)
+            .type(AccommodationPetFacilityType.PET_FOOD)
+            .build(),
+        AccommodationPetFacility.builder()
+            .id(2L)
+            .accommodation(accommodation)
+            .type(AccommodationPetFacilityType.EXERCISE_AREA)
+            .build()
+    );
+
+    allowPets = Arrays.asList(AllowPet.builder()
+            .id(1L)
+            .accommodation(accommodation)
+            .petType(PetType.SMALL_DOG)
+            .build(),
+        AllowPet.builder()
+            .id(2L)
+            .accommodation(accommodation)
+            .petType(PetType.MEDIUM_DOG)
+            .build()
+    );
+
+    accommodationImages = Arrays.asList(
+        AccommodationImage.builder()
+            .id(1L)
+            .accommodation(accommodation)
+            .imageUrl(ADDITIONAL_IMAGE_URL1)
+            .build(),
+        AccommodationImage.builder()
+            .id(2L)
+            .accommodation(accommodation)
+            .imageUrl(ADDITIONAL_IMAGE_URL2)
+            .build()
+    );
+
     thumbnail = new MockMultipartFile(
         "thumbnail",
         "thumbnail.jpg",
@@ -106,21 +185,13 @@ class AccommodationServiceTest {
         "thumbnail content".getBytes()
     );
 
-    // 추가 이미지 생성
-    additionalImages = Arrays.asList(
-        new MockMultipartFile("image1", "image1.jpg", "image/jpg", "image1 content".getBytes()),
-        new MockMultipartFile("image2", "image2.jpg", "image/jpg", "image2 content".getBytes())
+    additionalImages = List.of(
+        new MockMultipartFile(
+            "image1",
+            "image1.jpg",
+            "image/jpg",
+            "image1 content".getBytes())
     );
-
-    // 숙소 객체 생성
-    accommodation = Accommodation.builder()
-        .id(1L)
-        .host(host)
-        .name("숙소명")
-        .description("숙소 설명")
-        .address("서울시 강남구")
-        .thumbnailUrl(IMAGE_PATH_PREFIX + MOCK_UUID + ".jpg")
-        .build();
   }
 
   @Test
@@ -128,75 +199,58 @@ class AccommodationServiceTest {
   void createAccommodation_Success() {
     // given
     when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
-    when(accommodationRepository.existsByHost_Id(host.getId())).thenReturn(false);
+    when(accommodationRepository.existsByHostId(host.getId())).thenReturn(false);
 
-    List<String> facilities = Arrays.asList("WIFI", "PUBLIC_SWIMMING_POOL");
-    List<String> petFacilities = Arrays.asList("PET_FOOD", "EXERCISE_AREA");
-    List<String> allowPets = Arrays.asList("SMALL_DOG", "MEDIUM_DOG");
+    when(imageService.storeImage(thumbnail)).thenReturn(THUMBNAIL_URL);
+    when(imageService.storeImage(additionalImages.get(0))).thenReturn(ADDITIONAL_IMAGE_URL1);
 
-    when(request.getFacilities()).thenReturn(facilities);
-    when(request.getPetFacilities()).thenReturn(petFacilities);
-    when(request.getAllowPets()).thenReturn(allowPets);
+    ArgumentCaptor<Accommodation> accommodationCaptor = ArgumentCaptor.forClass(
+        Accommodation.class);
+    when(accommodationRepository.save(accommodationCaptor.capture())).thenReturn(accommodation);
 
-    // AccommodationCreateRequest.toEntity 모킹
-    doReturn(accommodation).when(request).toEntity(any(Host.class), anyString());
+    ArgumentCaptor<List<AccommodationFacility>> facilitiesCaptor = ArgumentCaptor.forClass(
+        List.class);
+    ArgumentCaptor<List<AccommodationPetFacility>> petFacilitiesCaptor = ArgumentCaptor.forClass(
+        List.class);
+    ArgumentCaptor<List<AllowPet>> allowPetsCaptor = ArgumentCaptor.forClass(List.class);
+    ArgumentCaptor<List<AccommodationImage>> accommodationImageCaptor = ArgumentCaptor.forClass(
+        List.class);
 
-    // ArgumentCaptor 설정
-    ArgumentCaptor<List<AccommodationFacility>> facilitiesCaptor = ArgumentCaptor
-        .forClass(List.class);
-    ArgumentCaptor<List<AccommodationPetFacility>> petFacilitiesCaptor = ArgumentCaptor
-        .forClass(List.class);
-    ArgumentCaptor<List<AllowPet>> allowPetsCaptor = ArgumentCaptor
-        .forClass(List.class);
-    ArgumentCaptor<List<AccommodationImage>> accommodationImageCaptor = ArgumentCaptor
-        .forClass(List.class);
+    // when
+    accommodationService.createAccommodation(host.getId(), request, thumbnail, additionalImages);
 
-    // UUID 고정 및 파일명 생성 메서드 모킹
-    try (MockedStatic<UUID> mockedUUID = mockStatic(UUID.class)) {
-      mockedUUID.when(UUID::randomUUID).thenReturn(MOCK_UUID);
+    // then
+    verify(hostRepository).findById(host.getId());
+    verify(accommodationRepository).existsByHostId(host.getId());
 
-      String thumbnailFilename = createFilename(thumbnail.getOriginalFilename());
-      List<String> additionalImageFilenames = createFilenames(additionalImages);
+    verify(imageService).storeImage(thumbnail);
+    verify(imageService).storeImage(additionalImages.get(0));
 
-      // when
-      accommodationService.createAccommodation(host.getId(), request, thumbnail, additionalImages);
+    verify(accommodationRepository).save(accommodationCaptor.capture());
+    Accommodation savedAccommodation = accommodationCaptor.getValue();
+    assertEquals(THUMBNAIL_URL, savedAccommodation.getThumbnailUrl());
 
-      // then
-      // 호스트 검증 확인
-      verify(hostRepository).findById(host.getId());
-      verify(accommodationRepository).existsByHost_Id(host.getId());
+    verify(accommodationFacilityRepository).saveAll(facilitiesCaptor.capture());
+    List<AccommodationFacility> capturedFacilities = facilitiesCaptor.getValue();
+    assertEquals(2, capturedFacilities.size());
 
-      // 숙소 저장 확인
-      verify(accommodationRepository).save(accommodation);
+    verify(accommodationPetFacilityRepository).saveAll(petFacilitiesCaptor.capture());
+    List<AccommodationPetFacility> capturedPetFacilities = petFacilitiesCaptor.getValue();
+    assertEquals(2, capturedPetFacilities.size());
 
-      // 편의시설 저장 확인
-      verify(accommodationFacilityRepository).saveAll(facilitiesCaptor.capture());
-      List<AccommodationFacility> capturedFacilities = facilitiesCaptor.getValue();
-      assertEquals(2, capturedFacilities.size());
+    verify(allowPetRepository).saveAll(allowPetsCaptor.capture());
+    List<AllowPet> capturedAllowPets = allowPetsCaptor.getValue();
+    assertEquals(2, capturedAllowPets.size());
 
-      // 반려동물 편의시설 저장 확인
-      verify(accommodationPetFacilityRepository).saveAll(petFacilitiesCaptor.capture());
-      List<AccommodationPetFacility> capturedPetFacilities = petFacilitiesCaptor.getValue();
-      assertEquals(2, capturedPetFacilities.size());
-
-      // 허용 반려동물 저장 확인
-      verify(allowPetRepository).saveAll(allowPetsCaptor.capture());
-      List<AllowPet> capturedAllowPets = allowPetsCaptor.getValue();
-      assertEquals(2, capturedAllowPets.size());
-
-      // 추가 이미지 저장 확인
-      verify(accommodationImageRepository).saveAll(accommodationImageCaptor.capture());
-      verify(imageService).storeImage(thumbnail, thumbnailFilename);
-      verify(imageService, times(1))
-          .storeImage(additionalImages.get(0), additionalImageFilenames.get(0));
-      verify(imageService, times(1))
-          .storeImage(additionalImages.get(1), additionalImageFilenames.get(1));
-    }
+    verify(accommodationImageRepository).saveAll(accommodationImageCaptor.capture());
+    List<AccommodationImage> capturedImages = accommodationImageCaptor.getValue();
+    assertEquals(1, capturedImages.size());
+    assertEquals(ADDITIONAL_IMAGE_URL1, capturedImages.get(0).getImageUrl());
   }
 
   @Test
   @DisplayName("숙소 등록 - 호스트 없음 실패")
-  void createAccommodation_HostNotFound_Failure() {
+  void createAccommodation_HostNotFound_ThrowsException() {
     // given
     when(hostRepository.findById(host.getId())).thenReturn(Optional.empty());
 
@@ -212,7 +266,7 @@ class AccommodationServiceTest {
 
   @Test
   @DisplayName("숙소 등록 - 권한 없음")
-  void createAccommodation_NotAuthorized() {
+  void createAccommodation_NotAuthorized_ThrowsException() {
     // given
     host = createNotAuthorizedHost(2L);
     when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
@@ -229,10 +283,10 @@ class AccommodationServiceTest {
 
   @Test
   @DisplayName("숙소 등록 - 이미 숙소 있음 실패")
-  void createAccommodation_AccommodationAlreadyExists_Failure() {
+  void createAccommodation_AccommodationAlreadyExists_ThrowsException() {
     // given
     when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
-    when(accommodationRepository.existsByHost_Id(host.getId())).thenReturn(true);
+    when(accommodationRepository.existsByHostId(host.getId())).thenReturn(true);
 
     // when
     // then
@@ -242,53 +296,99 @@ class AccommodationServiceTest {
         .hasFieldOrPropertyWithValue("ErrorCode", ErrorCode.ACCOMMODATION_ALREADY_EXISTS);
 
     verify(hostRepository).findById(host.getId());
-    verify(accommodationRepository).existsByHost_Id(host.getId());
+    verify(accommodationRepository).existsByHostId(host.getId());
   }
 
   @Test
-  @DisplayName("숙소 등록 - 허용 반려동물 없음 실패")
-  void createAccommodation_EmptyAllowPets_Failure() {
+  @DisplayName("숙소 조회 - 성공")
+  void getAccommodation_Success() {
     // given
-    when(hostRepository.findById(host.getId())).thenReturn(Optional.of(host));
-    when(accommodationRepository.existsByHost_Id(host.getId())).thenReturn(false);
+    Long accommodationId = accommodation.getId();
 
-    // 허용 반려동물 목록이 비어있는 경우
-    when(request.getAllowPets()).thenReturn(new ArrayList<>());
+    when(accommodationRepository.findByHostId(host.getId())).thenReturn(Optional.of(accommodation));
+    when(accommodationFacilityRepository.findAllByAccommodationId(accommodationId))
+        .thenReturn(facilities);
+    when(accommodationPetFacilityRepository.findAllByAccommodationId(accommodationId))
+        .thenReturn(petFacilities);
+    when(allowPetRepository.findAllByAccommodationId(accommodationId)).thenReturn(allowPets);
+    when(accommodationImageRepository.findAllByAccommodationId(accommodationId))
+        .thenReturn(accommodationImages);
+
+    // when
+    AccommodationResponse response = accommodationService.getAccommodation(host.getId());
+
+    // then
+    // 숙소 기본 정보 검증
+    assertThat(response.accommodationId()).isEqualTo(accommodationId);
+    assertThat(response.name()).isEqualTo(accommodation.getName());
+    assertThat(response.type()).isEqualTo(accommodation.getType().getValue());
+    assertThat(response.address()).isEqualTo(accommodation.getAddress());
+    assertThat(response.detailedAddress()).isEqualTo(accommodation.getDetailedAddress());
+    assertThat(response.description()).isEqualTo(accommodation.getDescription());
+    assertThat(response.latitude()).isEqualTo(accommodation.getLatitude());
+    assertThat(response.longitude()).isEqualTo(accommodation.getLongitude());
+    assertThat(response.thumbnailUrl()).isEqualTo(accommodation.getThumbnailUrl());
+
+    // 시설 목록 검증
+    assertThat(response.facilities()).hasSize(facilities.size());
+    for (int i = 0; i < facilities.size(); i++) {
+      assertThat(response.facilities().get(i)).isEqualTo(facilities.get(i).getType().getValue());
+    }
+
+    // 반려동물 시설 목록 검증
+    assertThat(response.petFacilities()).hasSize(petFacilities.size());
+    for (int i = 0; i < petFacilities.size(); i++) {
+      assertThat(response.petFacilities().get(i))
+          .isEqualTo(petFacilities.get(i).getType().getValue());
+    }
+
+    // 허용 반려동물 목록 검증
+    assertThat(response.allowPets()).hasSize(allowPets.size());
+    for (int i = 0; i < allowPets.size(); i++) {
+      assertThat(response.allowPets().get(i)).isEqualTo(allowPets.get(i).getPetType().getValue());
+    }
+
+    // 추가 이미지 목록 검증
+    assertThat(response.additionalImages()).hasSize(accommodationImages.size());
+    for (int i = 0; i < accommodationImages.size(); i++) {
+      assertThat(response.additionalImages().get(i))
+          .isEqualTo(accommodationImages.get(i).getImageUrl());
+    }
+
+    verify(accommodationRepository, times(1))
+        .findByHostId(host.getId());
+    verify(accommodationFacilityRepository, times(1))
+        .findAllByAccommodationId(accommodationId);
+    verify(accommodationPetFacilityRepository, times(1))
+        .findAllByAccommodationId(accommodationId);
+    verify(allowPetRepository, times(1))
+        .findAllByAccommodationId(accommodationId);
+    verify(accommodationImageRepository, times(1))
+        .findAllByAccommodationId(accommodationId);
+  }
+
+  @Test
+  @DisplayName("숙소 조회 - 숙소가 없는 호스트 예외 발생")
+  void getAccommodation_WhenAccommodationNotFound_ThrowsException() {
+    // given
+    Long accommodationNotFoundHostId = 2L;
+    when(accommodationRepository.findByHostId(accommodationNotFoundHostId))
+        .thenReturn(Optional.empty());
 
     // when
     // then
-    assertThatThrownBy(() -> accommodationService.createAccommodation(
-        host.getId(), request, thumbnail, additionalImages))
+    assertThatThrownBy(() -> accommodationService.getAccommodation(accommodationNotFoundHostId))
         .isInstanceOf(MeongnyangerangException.class)
-        .hasFieldOrPropertyWithValue("ErrorCode", ErrorCode.EMPTY_PET_TYPE);
+        .hasFieldOrPropertyWithValue("ErrorCode", ErrorCode.ACCOMMODATION_NOT_FOUND);
+
+    verify(accommodationRepository).findByHostId(accommodationNotFoundHostId);
   }
+
 
   private Host createNotAuthorizedHost(Long hostId) {
     return Host.builder()
         .id(hostId)
         .status(HostStatus.PENDING)
         .build();
-  }
-
-  private static String createFilename(String originalFilename) {
-    String fileName = UUID.randomUUID() + getExtension(originalFilename);
-    return IMAGE_PATH_PREFIX + fileName;
-  }
-
-  private static List<String> createFilenames(@Nullable List<MultipartFile> additionalImages) {
-    if (additionalImages != null && !additionalImages.isEmpty()) {
-      return additionalImages.stream()
-          .map(image -> createFilename(image.getOriginalFilename()))
-          .toList();
-    }
-    return null;
-  }
-
-  private static String getExtension(String originalFileName) {
-    try {
-      return originalFileName.substring(originalFileName.lastIndexOf("."));
-    } catch (StringIndexOutOfBoundsException e) {
-      throw new MeongnyangerangException(ErrorCode.INVALID_EXTENSION);
-    }
   }
 }
